// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderImageSlice renders 0 1`] = `
Array [
  .c0 {
  border-image-slice: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders function 1`] = `
Array [
  .c0 {
  border-image-slice: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders invalid theme path 1`] = `
Array [
  .c0 {
  border-image-slice: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders negative number 1`] = `
Array [
  .c0 {
  border-image-slice: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-image-slice: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-image-slice: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-image-slice: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-slice: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-slice: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-image-slice: July;
}

@media May {
  .c0 {
    border-image-slice: August;
  }
}

@media April {
  .c0 {
    border-image-slice: September;
  }
}

@media January {
  .c0 {
    border-image-slice: November;
  }
}

@media April {
  .c0 {
    border-image-slice: August;
  }
}

@media June {
  .c0 {
    border-image-slice: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: July;
}

@media May {
  .c0 {
    border-image-slice: August;
  }
}

@media April {
  .c0 {
    border-image-slice: September;
  }
}

@media January {
  .c0 {
    border-image-slice: November;
  }
}

@media April {
  .c0 {
    border-image-slice: August;
  }
}

@media June {
  .c0 {
    border-image-slice: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-slice: November;
  }
}

@media April {
  .c0 {
    border-image-slice: January;
  }
}

@media January {
  .c0 {
    border-image-slice: December;
  }
}

@media April {
  .c0 {
    border-image-slice: April;
  }
}

@media June {
  .c0 {
    border-image-slice: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-slice: November;
  }
}

@media April {
  .c0 {
    border-image-slice: January;
  }
}

@media January {
  .c0 {
    border-image-slice: December;
  }
}

@media April {
  .c0 {
    border-image-slice: April;
  }
}

@media June {
  .c0 {
    border-image-slice: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-image-slice: July;
  }
}

@media April {
  .c0 {
    border-image-slice: August;
  }
}

@media January {
  .c0 {
    border-image-slice: September;
  }
}

@media April {
  .c0 {
    border-image-slice: November;
  }
}

@media June {
  .c0 {
    border-image-slice: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-image-slice: July;
  }
}

@media April {
  .c0 {
    border-image-slice: August;
  }
}

@media January {
  .c0 {
    border-image-slice: September;
  }
}

@media April {
  .c0 {
    border-image-slice: November;
  }
}

@media June {
  .c0 {
    border-image-slice: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-slice: January;
  }
}

@media April {
  .c0 {
    border-image-slice: December;
  }
}

@media January {
  .c0 {
    border-image-slice: April;
  }
}

@media April {
  .c0 {
    border-image-slice: May;
  }
}

@media June {
  .c0 {
    border-image-slice: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-slice: January;
  }
}

@media April {
  .c0 {
    border-image-slice: December;
  }
}

@media January {
  .c0 {
    border-image-slice: April;
  }
}

@media April {
  .c0 {
    border-image-slice: May;
  }
}

@media June {
  .c0 {
    border-image-slice: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders postitive number 1`] = `
Array [
  .c0 {
  border-image-slice: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders string 1`] = `
Array [
  .c0 {
  border-image-slice: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageSlice renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderImageSlice renders valid theme path 1`] = `
Array [
  .c0 {
  border-image-slice: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-slice: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
